# RaspberryMakerEduShield_TestCode

./: README.md
Driver_L9110_i2c/: L9110_I2C.py  example.py  pyproject.toml
Driver_L9110_i2c/Driver_L9110_i2c/: __init__.py
MKE_M17/: README.md  pyproject.toml
MKE_M17/MKE_M17/: L9110_I2C.py  __init__.py
Project/Project_Demo_Temp_Buzzer_LCD/: Project_Demo_Temp_Buzzer_LCD.py  lcd_i2c_lib.py
config/: config.txt
testCode/GPIOTest/: Blink.py  Blink_led.py
testCode/TestOnewire/Adafruit_CircuitPython_DHT_clone/examples/: dht_simpletest.py
testCode/TestOnewire/Adafruit_DHT/examples/: AdafruitDHT.py  simpletest.py
testCode/TestOnewire/DS18B20_kxn/example_Code/: demo_Read_DS18B20_kxn.py
testCode/Thread_Test/: Thread_Python_Test.py  Thread_Python_Test_kxn.py
testCode/testI2CModule/Adafruit_ADS1x15/examples/: ads1x15_simpletest.py
testCode/testI2CModule/DS3231/: ds3231Test.py  link.txt
testCode/testI2CModule/I2CLCD/: lcd_i2c_lib.py  link tutorial  note_I2C_LCD.txt
tools/: note.txt
