[build-system]
requires = ["setuptools>=66.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Driver_L9110_i2c"
version = "25.03.13.1"
authors = [
    { name = "Quy-An", email = "quyan18b@gmail.com" },
]
description = "A package for controlling JetRacer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "smbus2>=0.4.2"
]